@@ -1,5 +1,12 @@
 2010-10-05  Sergio Martin <sergio.martin@artica.es>
 
+	* operation/agentes/estado_ultimopaquete.php
+	operation/agentes/estado_monitores.php: Added the policy
+	column to the monitors in agent view and improve the header
+	of force execution in few monitors view for bug: 3078713
+
+2010-10-05  Sergio Martin <sergio.martin@artica.es>
+
 	* operation/agentes/estado_ultimopaquete.php: Added the policy
 	column to the monitors list for bug 3078713
 
